# bpsr-crowd-data

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: cli.py  db.py  main.py  models.py  settings.py
app/adapters/: __init__.py  bp_timer.py  bpsr_logs.py
db/migrations/: 0001_init.sql
docs/: project-management.md
docs/maintainers/: repo-settings.md
scripts/: post_sample.py  smoke.py  smoke.sh  verify_mvp.py  verify_startup.py
src/bpsr_crowd_data/: cli.py  cli_db.py  db.py  main.py  models.py  settings.py
src/bpsr_crowd_data/adapters/: bp_timer.py  bpsr_logs.py
tests/: test_health.py  test_smoke.py
